# talk-to-history-hpl-metadata-collector

./: .gitignore  .pre-commit-config.yaml  .pytest.toml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yaml
metadata/: .gitignore
reports/coverage/: coverage.xml
src/: collector.py
tests/: test_build_search_query.py  test_fetch_and_save_documents.py  test_has_single_matching_creator.py  test_main.py  test_save_document.py
