[project]
name = "talk-to-history-hpl-brown-metadata"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "requests>=2.32.5",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
