[project]
name = "talk-to-history-hpl-metadata-collector"
version = "1.0.0"
description = "Automated metadata collector for H.P. Lovecraft's public domain correspondence from Brown University's Digital Repository."
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "requests>=2.32.5",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "genbadge[coverage]>=1.1.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
